CFLAGS+=-Wall -I./netfpga-packet-generator-c-library/include/ 

SUBDIRS =  oflops_debug openflow_echo_delay \
		   openflow_forwarding_latency \
           openflow_flow_stats openflow_packet_in\
           openflow_add_flow openflow_mod_flow \
           openflow_action_delay openflow_consistency

# openflow_action_delay nclude/nf_pktgen.h nf_pktgen_test openflow_port_status 
# openflow_interaction_test_2 openflow_interaction_test_3 snmp_cpu  
